# friendly

./: README.md  pyproject.toml  sandbox.ipynb
friendly/: Friendly_on_one_tract.ipynb  code_shuang.py  ellipses.py  entropy.py  gaussians.py  graphs.py  matcher.py  matching.py  pruner.py  utils.py
friendly/matchers/: ellipses.py  fof.py  kdtree.py
friendly/pruners/: ellipse_overlap.py  mag_diff.py
notebooks/: COSMOS_friendly_ellipse.ipynb  FoF_ellipse_overlap.ipynb  FoF_matching_example.ipynb  FriendlyTutorial.ipynb  Friendly_ellipse_RF.ipynb  Friendly_example_one_group.ipynb  Friendly_new_groups.ipynb  Friendly_on_one_tract.ipynb  Friendly_one_group_example.ipynb  Friendly_one_tract.ipynb  Save_data.ipynb
